--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html>
 <body>
-<!-- この例では "YourTextHere" の部分にツイートの本文を、"YourHashtag" の部分にハッシュタグを入れます -->
-<a href="https://www.twitter.com/share?text=%E3%83%86%E3%82%B9%E3%83%88%E3%81%A0%E3%82%88%E3%80%9C&url=https%3A%2F%2Fqiita.com%2F" target="_blank">ツイートする</a>
+<a href="https://www.twitter.com/share?text=%E3%83%86%E3%82%B9%E3%83%88%E3%81%A0%E3%82%88%E3%80%9C&url=https://twitter.com/EventSankei/status/1182890843302023168" target="_blank">ツイートする</a>
 </body>
 
 </html>
