--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
       </svg>
 <a href="https://www.twitter.com/intent/tweet?text=テストです&url=https://www.sankei.jp/%20%23ハッシュタグテスト&
 via=EventSankei" target="_blank">ツイートする</a>
+<p><a href="sample.html" target="_blank">写真合成テスト</a></p>
+<p><a href="shake.html" target="_blank">キャラ上下テスト</a></p>
 </body>
 
 </html>
