ローテーション、右上飛んでいく

--- a/shake.html
+++ b/shake.html
@@ -17,6 +17,7 @@
 // 画像の読み込み
 var img = new Image();
 img.src = 'otaku_girl_fashion_penlight.png'; // 画像のパスに替えてください
+//img.src = 'sd_char.png'; // 画像のパスに替えてください
 img.onload = function() {
   shakeImage();
 };
