キャラ回転右上移動

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 via=EventSankei" target="_blank">ツイートする</a>
 <p><a href="sample.html" target="_blank">写真合成テスト</a></p>
 <p><a href="shake.html" target="_blank">キャラ上下テスト</a></p>
+<p><a href="rotation.html" target="_blank">キャラ回転右上移動</a></p>
 </body>
 
 </html>
